<resources>
    <string name="app_name">HujiRide</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Your registration has been successfully completed!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="destHujiField">HUJI</string>
    <string name="insertSourceHint">Insert source ...</string>
    <string name="insertDestHint">Insert destination ...</string>
    <string name="hujirides">HujiRides</string>
    <string name="addNewGroupBtn">Add New Group</string>
    <string name="groupsTitle">GROUPS</string>
    <string name="next_rides_title">Next Rides</string>
    <string name="addNewRideBtn">add new \nride</string>
    <string name="sortDropDownHintText">Sort</string>
    <string name="switchDirectionBtnText">Switch Direction</string>
    <string name="ridesDetailsTitle">Ride\'s Details:</string>
    <string name="contactTheDriverBtnText">contact the\ndriver</string>
    <string name="backToGroupsBtnText">BACK TO \nGROUPS</string>
    <string name="goToRidesListBtnText">ALL \nRIDES</string>
    <string name="driverBtnText">I\'m The Driver</string>
    <string name="trampistBtnText">I Want to Join</string>
    <string name="searchRidesTitle">Search Rides</string>
    <string name="dashboardText">My Rides as Passenger</string>
    <string name="dashboardPublishedRidesTitle">My Rides as Driver</string>
    <string name="cancel_reg_dialog_body">"Are you sure you want to cancel your registration?\nAll the data will be deleted!"</string>
    <string name="cancel_reg_dialog_title">Cancel Registration?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="first_name_mandatoryField">First Name*</string>
    <string name="last_name_mandatoryField">Last Name*</string>
    <string name="your_phone_mandatoryField">Your Phone*</string>
    <string name="id_mandatoryField">ID*</string>
    <string name="successful_onb_tip">Tap next to proceed to the app!</string>
    <string name="searchGroupTitle">Search for New Group:</string>
    <string name="addGroupBtnText">add\ngroups</string>
    <string name="noRidesInTheNearFuture">No available rides</string>
    <string name="afterReportingBugText">Thanks for helping us \nimprove our app!</string>
    <string name="settingsTitle">Settings</string>
    <string name="hujiDest">HUJI</string>
    <string name="deleteRideDialogTitle">Delete Ride From My Rides</string>
    <string name="deleteRideDialogTxt">Are you sure you want to delete this ride from your rides list?</string>
    <string name="deleteRidePublishedDialogTitle">Delete Ride I Created</string>
    <string name="deleteRidePublishedTxt">Are you sure you want to delete this ride?</string>
    <string name="deleteRideDialogToast">Ride has been deleted successfully</string>
    <string name="addRideDialogToast">Ride was added successfully</string>
    <string name="addRideBtnTxt">Add to my rides</string>
    <string name="deleteRideBtnTxt">delete from my rides</string>
    <string name="unregisterGroupDialogTitle">Unregister to Group</string>
    <string name="unregisterGroupDialogTxt">Are you sure you want to unregister to group?</string>
    <string name="filterDropDownTitle">Filter</string>
    <string name="join_group">Join Group</string>
    <string name="add_new_ride">Add new Ride</string>
    <string name="contact_driver">contact driver</string>

    <string name="filterToHuji">source to Huji</string>
    <string name="filterFromHuji">Huji to destination</string>
    <string name="filterAll">all</string>

    <string-array name="sorting_list">
        <item>no sorting</item>
        <item>time</item>
        <item>src and dest</item>
        <item>lexicographic order</item>
    </string-array>

    <string-array name="filtering_list">
        <item>all</item>
        <item>source to Huji</item>
        <item>Huji to destination</item>
    </string-array>

    <string-array name="stops_list">
        <item>Gas station</item>
        <item>Pick up my child</item>
    </string-array>


    <string-array name="comments_list">
        <item>No smoking</item>
        <item>Only vaccinated</item>
        <item>Only Women</item>
        <item>Be on time, I wont wait</item>
        <item>I have parked far</item>
    </string-array>

    <string name="ride_details_source">From: %1$s</string>
    <string name="ride_details_dest">To: %1$s</string>
    <string name="ride_details_time">%1$tH:%1$tM at %1$te/%1$tm/%1$ty</string>

    <string name="driver_details_fullName">%1$s %2$s</string>


</resources>