<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Rides.RidesList">


    <TextView
        android:id="@+id/title"
        style="@style/MainAppStyle.Header"
        android:layout_height="wrap_content"
        android:text="@string/next_rides_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new_ride"
        style="@style/MainAppStyle.Button.fab"
        android:src="@drawable/ic_baseline_playlist_add_24"
        android:text="@string/add_new_ride"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="Add New Ride" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/groups_btn"
        style="@style/MainAppStyle.Button.fab"
        android:src="@drawable/ic_baseline_group_24"
        android:text="@string/add_new_ride"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_new_ride"
        android:contentDescription="choose group"
        />

    <LinearLayout
        android:id="@+id/sorting_filtering_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sort_as"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/sortDropDownHintText"
            app:startIconDrawable="@drawable/ic_baseline_sort_24"
            android:layout_weight="1"
            android:paddingVertical="6dp"
            android:paddingHorizontal="14dp"
            >

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:paddingVertical="2dp"
                android:text="Choose..."
                android:lines="1"
                android:textSize="11sp"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/filterDropDownTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_sort_24"
            android:layout_weight="1"
            android:paddingVertical="6dp"
            android:paddingHorizontal="14dp"
            >

            <AutoCompleteTextView
                android:id="@+id/autoCompleteFilter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:paddingVertical="2dp"
                android:text="All"
                android:textSize="11sp"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rides_list_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sorting_filtering_layout"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/ride_item"
        />

    <ProgressBar
        android:id="@+id/rides_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="5dp"
        android:indeterminateOnly="true"
        />


<!--    <ImageButton-->
<!--        android:id="@+id/apply_btn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="112dp"-->
<!--        android:backgroundTint="@color/white"-->
<!--        android:src="@drawable/new_v"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/rides_list_recyclerView"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.925"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

<!--    <fragment-->
<!--        android:id="@+id/place_autocomplete_fragment"-->
<!--        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"-->
<!--        android:layout_width="250dp"-->
<!--        android:layout_height="48dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/sort_as"-->
<!--        tools:visibility="gone"-->
<!--        />-->

    <ImageView
        android:id="@+id/no_rides_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/square_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:visibility="gone"
        />


    <TextView
        style="@style/MainAppStyle"
        android:id="@+id/no_near_rides_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/noRidesInTheNearFuture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_rides_img"
        tools:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
