<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SearchHome">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/map_new" />


    <TextView
        android:id="@+id/title"
        style="@style/MainAppStyle.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/searchRidesTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/src_cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/srcDestImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="60dp"
        >

        <fragment
            android:id="@+id/place_autocomplete_fragment_src"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/src_cardview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="60dp"
        >
    <fragment
        android:id="@+id/place_autocomplete_fragment_dest"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/srcDestImg"
        android:layout_width="170dp"
        android:layout_height="85dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:srcCompat="@drawable/to_huji" />


    <TextView
        android:id="@+id/src_huji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/fredoka_one"
        android:text="From:  HUJI"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/srcDestImg" />

    <TextView
        android:id="@+id/dest_huji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/fredoka_one"
        android:text="To:  HUJI"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/src_huji" />

    <Button
        android:id="@+id/driver_btn"
        style="@style/MainAppStyle.Button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circle_blue"
        android:drawableTop="@drawable/ic_twotone_directions_car_24"
        android:text="@string/driverBtnText"
        app:backgroundTint="#27A9E1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/trampist_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        />

    <Button
        style="@style/MainAppStyle.Button"
        android:id="@+id/trampist_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circle_blue"
        android:drawableTop="@drawable/ic_twotone_person_outline_24"
        android:text="@string/trampistBtnText"
        app:backgroundTint="#27A9E1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/driver_btn"
        app:layout_constraintBottom_toBottomOf="@id/driver_btn"
        />

    <ImageButton
        android:id="@+id/switchDirectionBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@null"
        android:backgroundTint="#00FFFFFF"
        android:elevation="10dp"
        android:src="@drawable/ic_baseline_swap_vert_24"
        app:layout_constraintBottom_toBottomOf="@id/src_cardview"
        app:layout_constraintRight_toRightOf="@id/src_cardview"
        app:layout_constraintTop_toTopOf="@id/src_cardview"
        app:tint="@color/black"
        android:layout_margin="7dp"
        android:scaleType="centerInside"

        />

</androidx.constraintlayout.widget.ConstraintLayout>

